# example-pytest

./: README.md  pyproject.toml
tests/module_1/: __init__.py  conftest.py  test_prime.py
